# logging-relay

./: DockerFile  README.md  docker-compose.yaml  main.py  pyproject.toml
tests/: test_main.py
